test/invalid/line_directive_suffix.d
//T error: line_directive_suffix.d:4:18:
//T error: `suffix` is not a valis line directive suffix.

#line 42 "file.d" suffix
